--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
     <div class="container">
-        <img src="images/34099.jpg" alt="รูปโปรไฟล์" class="profile">
+        <img src="images/รูปหมู่.jpg" alt="รูปโปรไฟล์" class="profile">
 
         <h1>นายพัศนัย เหง้าศิริ</h1>
         <h2>สาขาเทคโนโลยีสารสนเทศ</h2>
