--- a/index.html
+++ b/index.html
@@ -23,6 +23,37 @@
         </a>
     </div>
 
+    <!-- ส่วนสมาชิก -->
+    <div class="members">
+        <h2>สมาชิกในกลุ่ม</h2>
+
+        <div class="member-list">
+            <div class="card">
+                <img src="images/p.jpg">
+                <p>p</p>
+            </div>
+
+            <div class="card">
+                <img src="images/ปิ่น.jpg">
+                <p>ปิ่น</p>
+            </div>
+
+            <div class="card">
+                <img src="images/เนย.jpg">
+                <p>เนย</p>
+            </div>
+
+            <div class="card">
+                <img src="images/เบิร์ด.jpg">
+                <p>เบิร์ด</p>
+            </div>
+
+            <div class="card">
+                <img src="images/P.jpg">
+                <p>P</p>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
-
