--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="member-list">
             <div class="card">
                 <img src="images/p.jpg">
-                <p>p</p>
+                <p>เพชร</p>
             </div>
 
             <div class="card">
@@ -47,10 +47,6 @@
                 <img src="images/เบิร์ด.jpg">
                 <p>เบิร์ด</p>
             </div>
-
-            <div class="card">
-                <img src="images/P.jpg">
-                <p>P</p>
             </div>
         </div>
     </div>
